force-app/main/default/objects/ANZARD_Data__c/fields/PCOS__c.field-meta.xml
<CustomField>
    <fullName>PCOS__c</fullName>
    <formula>IF(
    PARENT_SEX__c = &quot;2&quot; || PARENT_SEX__c = &quot;3&quot;,
    NULL,
    IF(
        PARENT_SEX__c = &quot;1&quot; &amp;&amp; CYCLE_TYPE__c = &quot;8&quot;,
        NULL,
        IF(
            ISBLANK(LEFT(TEXT( CYCLE_ID__r.Contact.PCOS_Diagnosed__c ), 1)),
            &quot;3&quot;,
            IF(
                LEFT(TEXT(CYCLE_ID__r.Contact.PCOS_Diagnosed__c), 1) = &quot;Y&quot;,
                &quot;2&quot;,
                IF(
                    LEFT(TEXT(CYCLE_ID__r.Contact.PCOS_Diagnosed__c), 1) = &quot;N&quot;,
                    &quot;1&quot;,
                    IF(
                        LEFT(TEXT(CYCLE_ID__r.Contact.PCOS_Diagnosed__c), 1) = &quot;U&quot;,
                        &quot;3&quot;,
                        NULL
                    )
                )
            )
        )
    )
)</formula>
    <label>PCOS</label>
    <type>Text</type>
</CustomField>