force-app/main/default/objects/ANZARD_Data__c/fields/PGT_REASON__c.field-meta.xml
<CustomField>
    <fullName>PGT_REASON__c</fullName>
    <formula>IF(
    N_PGT_ASSAY__c &gt; 0,
    LEFT(TEXT(CYCLE_ID__r.PGT_REASON__c), 1),
    NULL
)</formula>
    <label>PGT_REASON</label>
    <type>Text</type>
</CustomField>