force-app/main/default/objects/ANZARD_Data__c/fields/POSTCODE__c.field-meta.xml
<CustomField>
    <fullName>POSTCODE__c</fullName>
    <formula>CYCLE_ID__r.Contact.MailingPostalCode</formula>
    <label>POSTCODE</label>
    <type>Text</type>
</CustomField>