force-app/main/default/objects/ANZARD_Data__c/fields/PR_CLIN__c.field-meta.xml
<CustomField>
    <fullName>PR_CLIN__c</fullName>
    <formula>LEFT(TEXT( CYCLE_ID__r.PR_CLIN__c ),1)</formula>
    <label>PR_CLIN</label>
    <type>Text</type>
</CustomField>