force-app/main/default/objects/ANZARD_Data__c/fields/PR_ECTOP__c.field-meta.xml
<CustomField>
    <fullName>PR_ECTOP__c</fullName>
    <formula>IF( PR_CLIN__c = &quot;y&quot;,

IF( TEXT(CYCLE_ID__r.PR_ECTOP__c) = NULL, &quot;n&quot;, LEFT(TEXT(CYCLE_ID__r.PR_ECTOP__c),1))

,NULL)</formula>
    <label>PR_ECTOP</label>
    <type>Text</type>
</CustomField>