force-app/main/default/objects/ANZARD_Data__c/fields/PR_END_DT__c.field-meta.xml
<CustomField>
    <fullName>PR_END_DT__c</fullName>
    <formula>CYCLE_ID__r.PR_END_DT__c</formula>
    <label>PR_END_DT</label>
    <type>Date</type>
</CustomField>