force-app/main/default/objects/ANZARD_Data__c/fields/PR_REDUC__c.field-meta.xml
<CustomField>
    <fullName>PR_REDUC__c</fullName>
    <formula>IF( PR_CLIN__c &lt;&gt;NULL,
IF( TEXT(CYCLE_ID__r.PR_TOP__c) = NULL,&quot;n&quot;,LEFT(TEXT(CYCLE_ID__r.PR_TOP__c),1)),
NULL)</formula>
    <label>PR_REDUC</label>
    <type>Text</type>
</CustomField>