force-app/main/default/objects/ANZARD_Data__c/fields/PR_TOP__c.field-meta.xml
<CustomField>
    <fullName>PR_TOP__c</fullName>
    <formula>IF(
    AND(
        TEXT(CYCLE_ID__r.PR_TOP__c) = &apos;&apos;,
        PR_CLIN__c = &apos;y&apos;
    ),
    &quot;n&quot;, 
    LEFT(TEXT(CYCLE_ID__r.PR_TOP__c),1)
)</formula>
    <label>PR_TOP</label>
    <type>Text</type>
</CustomField>