force-app/main/default/objects/ANZARD_Data__c/fields/PREG_20W__c.field-meta.xml
<CustomField>
    <fullName>PREG_20W__c</fullName>
    <formula>IF(  CYCLE_TYPE__c = &quot;8&quot;, NULL, 
IF((TEXT(CYCLE_ID__r.Contact.Pregnancies_of_20_weeks_or_more__c)= NULL), &quot;n&quot;, LEFT(TEXT (CYCLE_ID__r.Contact.Pregnancies_of_20_weeks_or_more__c ),1)))</formula>
    <label>PREG_20W</label>
    <type>Text</type>
</CustomField>