force-app/main/default/objects/ANZARD_Data__c/fields/SP_QUAL__c.field-meta.xml
<CustomField>
    <fullName>SP_QUAL__c</fullName>
    <formula>IF(
    SP_SOURCE__c = &quot;1&quot; &amp;&amp; SP_SITE__c = &quot;e&quot;,
    IF(
        ISBLANK(CYCLE_ID__r.SP_QUAL__c),
        CYCLE_ID__r.SP_QUAL_RollUp__c,
        CYCLE_ID__r.SP_QUAL__c
    ),
    NULL
)</formula>
    <label>SP_QUAL</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>