force-app/main/default/objects/ANZARD_Data__c/fields/SP_SITE__c.field-meta.xml
<CustomField>
    <fullName>SP_SITE__c</fullName>
    <formula>LEFT( TEXT(CYCLE_ID__r.SP_SITE__c) ,1)</formula>
    <label>SP_SITE</label>
    <type>Text</type>
</CustomField>