force-app/main/default/objects/ANZARD_Data__c/fields/SP_SOURCE__c.field-meta.xml
<CustomField>
    <fullName>SP_SOURCE__c</fullName>
    <formula>LEFT( TEXT(CYCLE_ID__r.SP_SOURCE__c) ,1)</formula>
    <label>SP_SOURCE</label>
    <type>Text</type>
</CustomField>