force-app/main/default/objects/ANZARD_Data__c/fields/STIM_1ST__c.field-meta.xml
<CustomField>
    <fullName>STIM_1ST__c</fullName>
    <formula>IF(
        OV_STIM__c = &quot;y&quot;,
        BLANKVALUE(LEFT(TEXT(CYCLE_ID__r.STIM_1ST__c), 1), &quot;u&quot;),
        &quot;&quot;
    )</formula>
    <label>STIM_1ST</label>
    <type>Text</type>
</CustomField>