force-app/main/default/objects/ANZARD_Data__c/fields/SURR__c.field-meta.xml
<CustomField>
    <fullName>SURR__c</fullName>
    <defaultValue>&quot;n&quot;</defaultValue>
    <label>SURR</label>
    <length>1</length>
    <type>Text</type>
</CustomField>