force-app/main/default/objects/ANZARD_Data__c/fields/WEIGHT_F__c.field-meta.xml
<CustomField>
    <fullName>WEIGHT_F__c</fullName>
    <formula>IF(CYCLE_TYPE__c = &quot;8&quot;, NULL,
    IF(NOT(ISBLANK(CYCLE_ID__r.Patient_Weight_at_Cycle_Start__c)) &amp;&amp; CYCLE_ID__r.Patient_Weight_at_Cycle_Start__c &lt;&gt; 0,
        CYCLE_ID__r.Patient_Weight_at_Cycle_Start__c,
        IF(NOT(ISBLANK(CYCLE_ID__r.Contact.Weight_kg__c)) &amp;&amp; CYCLE_ID__r.Contact.Weight_kg__c &lt;&gt; 0,
            CYCLE_ID__r.Contact.Weight_kg__c,
            999)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WEIGHT_F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>