force-app/main/default/objects/ANZARD_Data__c/listViews/CEB_Logbook.listView-meta.xml
<ListView>
    <fullName>CEB_Logbook</fullName>
    <columns>CYCLE_ID__c</columns>
    <columns>PARENT_SEX__c</columns>
    <columns>CYCLE_TYPE__c</columns>
    <columns>DON_AGE__c</columns>
    <columns>CI_MALE__c</columns>
    <columns>SP_SITE__c</columns>
    <columns>N_V_EGTH__c</columns>
    <columns>N_ICSI__c</columns>
    <columns>N_FERT__c</columns>
    <columns>N_BL_ET__c</columns>
    <columns>N_BLFZ_V__c</columns>
    <columns>PR_CLIN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DON_AGE__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>N_V_EGTH__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>CEB Logbook</label>
</ListView>